--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moja pierwsza strona</title>
-    <link rel="icon" href="images/ikonka.png">
+    <link rel="icon" href="images/icon1.png">
     <meta property="og:image" content="images/share/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
@@ -140,7 +140,7 @@
         </section>
     </main>
 
-    <p class="dayWeek">Dzień tygodnia: <strong class="day">piątek</strong></p>
+    <p class="dayWeek">Dzień tygodnia: <strong class="day">sobota</strong></p>
     <p class="dayWeek">Mam jeszcze <strong class="howMuch"></strong>czasu na zrobienie pracy domowej.</p>
 
 
