README.md technologies added

--- a/index.html
+++ b/index.html
@@ -28,35 +28,25 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,700;1,400&family=Xanh+Mono:ital@0;1&display=swap"
         rel="stylesheet">
-
-
-
 </head>
 
 
 <body class="body">
-
     <header class="header">
         <h1>Marta Wójcik</h1>
     </header>
     <nav class="navigation">
-
-
         <a class="navigation__link" href="#home">Home</a>
         <a class="navigation__link" href="#gdzie-mieszkam">Gdzie mieszkam</a>
         <a class="navigation__link" href="#kariera">Kariera</a>
         <a class="navigation__link" href="#piosenki">Moje ulubione piosenki</a>
         <a class="navigation__link" href="#linki">Linki</a>
-
     </nav>
-
 
     <p class="button">
         <button class="js-changeBackground"><span class="themeName">Ciemny</span> motyw</button>
     </p>
     <main>
-
-
         <section id="linki" class="section">
             <p class="section__paragraph--centered">Bardzo lubię mojego psa Berneńczyka. Ma już 7 lat. Mówię na
                 niego miś. <br>
@@ -66,24 +56,15 @@
             <h2 class="section__subHeader">Gdzie mieszkam</h2>
             <img class="section__image" src='https://i.postimg.cc/y8nTmDmC/wie.jpg' alt='wie'>
             <p class="section__paragraph">Tekst jest <span class="interestingElement">"dziwny"</span>, to nie jest moja
-                wizytówka tylko piszę
-                co mi
-                do głowy przyszło. Mieszkam na
-                wsi.
+                wizytówka tylko piszę co mi do głowy przyszło. Mieszkam na wsi.
                 Chciałabym tu w przyszłości, oczywiście nie dalekiej zbudować tu<span class="interestingElement">
-                    swój
-                    dom.</span> Wieś to miejsce gdzie
-                na pewno chcę spędzić resztę swojego życia. Teraz przemija okres grzybowy, ten sezon zdecyowanie
-                był
-                udany.</p>
+                    swój dom.</span> Wieś to miejsce gdzie na pewno chcę spędzić resztę swojego życia. Teraz przemija
+                okres grzybowy, ten sezon zdecyowanie
+                był udany.</p>
         </section>
+
         <section id="kariera" class="section">
-
             <h3 class="section__subHeader">Kariera bez kariery</h3>
-
-
-
-
             <p class="section__paragraph">Pracowałam w wielu zawodach m.in jako klenerka, barmanka, opiekun osób
                 starszych,
                 wyjeżdżałam na
@@ -99,19 +80,10 @@
             </p>
         </section>
 
-
-
-
-
-
-
-
         <section id="piosenki">
             <div class="tableContainer">
                 <table class="table">
-
                     <caption class="table__caption">Moje ulubione piosenki</caption>
-
                     <tr class="table__row">
                         <th class="table__cell table__cell--header" scope="col">Wykonawca</th>
                         <th class="table__cell table__cell--header" scope="col">Tytuł</th>
@@ -131,9 +103,6 @@
                         <th class="table__cell table__cell--header" scope="row">Scooter</th>
                         <td class="table__cell">Mary got no lamb</td>
                         <td class="table__cell">999</td>
-
-
-
                     </tr>
                 </table>
             </div>
@@ -143,11 +112,7 @@
     <p class="dayWeek">Dzień tygodnia: <strong class="day">sobota</strong></p>
     <p class="dayWeek">Mam jeszcze <strong class="howMuch"></strong>czasu na zrobienie pracy domowej.</p>
 
-
-
-
     <footer class="footer">Copyrights all reserved by MW</footer>
 </body>
-
 
 </html>
