second function added

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         </section>
     </main>
 
-    <p class="dayWeek">Dzień tygodnia: <strong class="day">sobota</strong></p>
+    <p class="dayWeek">Dzień tygodnia: <strong class="day">niedziela</strong></p>
     <p class="dayWeek">Mam jeszcze <strong class="howMuch"></strong>czasu na zrobienie pracy domowej.</p>
 
     <footer class="footer">Copyrights all reserved by MW</footer>
