indext.html text changed

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     </main>
 
     <p class="dayWeek">Dzień tygodnia: <strong class="day">niedziela</strong></p>
-    <p class="dayWeek">Mam jeszcze <strong class="howMuch"></strong>czasu na zrobienie pracy domowej.</p>
+    <p class="dayWeek">Mam jeszcze <strong class="howMuch"></strong>czasu na realizacje tygodniowego planu.</p>
 
     <footer class="footer">Copyrights all reserved by MW</footer>
 </body>
